tests/fail/17_stack_trace.lang
// ОЖИДАЕТСЯ ОШИБКА: ошибка в глубине вызовов
функция вложенная() : пусто {
    паника("ошибка в глубине вызовов");
}

функция обертка() : пусто {
    вложенная();
}

функция Начало() : целое {
    обертка();
    вернуть 0;
}
